--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
         for (let i = 0; i < tab4.length; i++) {
             console.log(tab4[i]);
         }
+        console.log("zadanie6----------------------------------------");
+        tab5.sort();
+        for (let i = 0; i < tab5.length; i++) {
+            console.log(tab5[i]);
+        }
     </script>
 </body>
 </html>
