--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         for (let i = 0; i < tab5.length; i++) {
             console.log(tab5[i]);
         }
+        console.log("zadanie7----------------------------------------");
+        const tab6=tab5.slice(3,7);
+        for (let i = 0; i < tab6.length; i++) {
+            console.log(tab6[i]);
+        }
     </script>
 </body>
 </html>
