--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             console.log(tab4[i]);
         }
         console.log("zadanie6----------------------------------------");
-        tab4.sort(nap);
+        tab4.sort();
         for (let i = 0; i < tab4.length; i++) {
             console.log(tab4[i]);
         }
